<resources>
    <string name="app_name">Sensors</string>
    <string name="action_settings">Nothing to find here.</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_available">Is the following sensor on your device?</string>
    <string name="fragment_capability">What are the capabilities of this sensor?</string>
    <string name="fragment_listener">What is the output of the listener?</string>
    <string name="available_all">All Sensors</string>
    <string name="available_proxy">Only Proximity Sensor</string>
    <string name="listener_value">Value change listener</string>
    <string name="listener_accuracy">Accuracy change listener</string>
    <string name="button_capability">Shuffle through some Properties</string>
</resources>
