<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_available_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_available"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup_available">

        <RadioButton
            android:id="@+id/radioButton_all_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/available_all"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/radioButton_proxy_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_proxy"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_available_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:padding="8dp"/>
</LinearLayout>

